[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlanetSpawnerBackground.gd" type="Script" id=2]

[node name="PlanetSpawnerBackground" type="Node2D"]
script = ExtResource( 2 )

[node name="SpawnPosition1" type="Position2D" parent="."]
position = Vector2( 1280, 88 )

[node name="SpawnPosition2" type="Position2D" parent="."]
position = Vector2( 1280, 296 )

[node name="SpawnPosition3" type="Position2D" parent="."]
position = Vector2( 1280, 504 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
